--- a/index.html
+++ b/index.html
@@ -3,22 +3,44 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- FONT-FAMILY -->
-
+        <!-- FONT-FAMILY GOOGLE -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+        <!-- FONT-FAMILY FONTAWESOME -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- LINK CSS -->
         <link rel="stylesheet" href="./css/style.css">
         <!-- TITLE PAGE -->
-        <title>Document</title>
+        <title>Dropbox</title>
     </head>
 
         <!-- START BODY -->
     <body class="debug">
         <!-- START MAIN HEADER -->
-        <head>
-            <div class="container">
-                HEAD
+        <header>
+            <div class="header-container flex-container">
+                <div class="header-container-left flex-container">
+                    <div>
+                        <a href="#"><img src="./img/logo-small.png" alt=""></a>
+                    </div>
+                    <ul>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                        <li><a href="#">Piani e Prezzi</a></li>
+                    </ul>
+                </div>
+                <div class="header-container-right flex-container">
+                    <ul>
+                        <li><a href="#">Supporto</a></li>
+                        <li><a href="#">Contatta l'ufficio vendite</a></li>
+                        <li><a href="#">Accedi</a></li>
+                        <li><a href="#">Inizia</a></li>
+                    </ul>
+                       
+                </div>
             </div>
-        </head>
+        </header>
         <!-- END MAIN HEADER -->
 
         <!-- START MAIN -->
