--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -36,8 +36,7 @@
                         <li><a href="#">Contatta l'ufficio vendite</a></li>
                         <li><a href="#">Accedi</a></li>
                         <li><a href="#">Inizia</a></li>
-                    </ul>
-                       
+                    </ul> 
                 </div>
             </div>
         </header>
@@ -45,9 +44,47 @@
 
         <!-- START MAIN -->
         <main>
-            <div class="container">
-                MAIN
-            </div>
+            <!-- start sectio 1 - jumbo -->
+            <section class="section-1-jumbo">
+                <div class="big-container">
+                    <div class="row-1-section-1">
+                        <h1> Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                    </div>
+                    <div class="row-2-section-1 flex-container">
+
+                        <div class="colum-left-section-1">
+                            <p>
+                                Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                            </p>
+                            <a href="#">Inizia la prova gratuita</a>
+                            <p>Annulla in qualsiasi momento</p>
+                            <div>
+                                <i class="arrow fa-solid fa-arrow-down"></i>
+                            </div>
+                        </div>
+
+                        <div class="colum-right-section-1">
+                            <div class="img-jumbo">
+                                <img src="./img/jumbo.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- start section 2 -->
+            <section></section>
+
+            <!-- start section 3 -->
+            <section></section>
+            <!-- start section 4 -->
+            <section></section>
+            <!-- start section 5 -->
+            <section></section>
+            <!-- start section 6 -->
+            <section></section>
+            <!-- start section 7 -->
+            <section></section>
         </main>
         <!-- END MAIN -->
 
