--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li><a href="#">Supporto</a></li>
                         <li><a href="#">Contatta l'ufficio vendite</a></li>
                         <li><a href="#">Accedi</a></li>
-                        <li><a href="#">Inizia</a></li>
+                        <li><a class="button" href="#">Inizia</a></li>
                     </ul> 
                 </div>
             </div>
@@ -73,7 +73,99 @@
             </section>
 
             <!-- start section 2 -->
-            <section></section>
+            <section class="section-2">
+                <div class="container">
+                    <div class="row1-section-2">
+                        <h2>Trova il piano business che fa per te</h2>
+                        <div class="radio-container">
+                            <input type="radio" name="chose-plan" id="monthly">
+                            <label for="monthly">Fatturazione mensile</label>
+                            <input type="radio" name="chose-plan" id="annual">
+                            <label for="">Fatturazione annuale</label>
+                        </div>
+                    </div>
+                   
+                    <!-- SECTION 2 CENETER -->
+                    <div class="row-2-section-2 flex-container">
+                        <!-- COLONNA 1 -->
+                        <div class="colum-1-section-2">
+
+                            <div class="type-of-user">
+                                <i class="fa-solid fa-user"></i> Singolo
+                            </div>
+                            <h4>Professional</h4>
+                            <h5>€ 12,00</h5>
+                            <div class="color-gray">/mese</div>
+
+                            <div class="flex-container">
+                                <div>
+                                    <i class="fa-solid fa-user"></i> 
+                                </div>
+                                <div>
+                                    1 utente
+                                </div>
+                            </div>
+
+                            <div class="flex-container">
+                                <div>
+                                    <i class="fa-solid fa-folder"></i> 
+                                </div>
+                                <div>
+                                    5 TB di spazio di archiviazione
+                                </div>
+                            </div>
+
+                            <div class="flex-container">
+                                <div>
+                                    <i class="fa-solid fa-share-nodes"></i> 
+                                </div>
+                                <div>
+                                    Funzioni di produttività premium e condivisione file semplice e sicura
+                                </div>
+                            </div>
+                            <div>
+                                <a class="button" href="#">Prova gratis per 30 giorni</a>
+                            </div>
+                            <div>
+                                oppure <a href="#">acquista ora</a>
+                            </div>
+                            <div>
+                                <hr>
+                            </div>
+                            <div>
+                                <h5>
+                                    Punti salienti del piano
+                                </h5>
+                                <ul>
+                                    <li>
+                                        Invia file fino a 100 GB con Dropbox Transfert
+                                    </li>
+                                    <li>
+                                        Cartelle offline su dispositivi mobili
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- COLONNA 2 -->
+                        <div class="colum-2-section-2">
+                            col 2
+                        </div>
+
+                        <!-- COLONNA 3 -->
+                        <div class="colum-3-section-2">
+                            col 3
+                        </div>
+                    </div>
+
+                    <!-- SECTION 2 BOTTOM -->
+                    <div class="row3-section-3">
+                        bottom section row3
+                    </div>
+
+
+                </div>
+            </section>
 
             <!-- start section 3 -->
             <section></section>
@@ -91,7 +183,7 @@
         <!-- START FOOTER -->
         <footer>
             <div class="container">
-                FOOTER
+                <br><br><br><br><br>FOOTER
             </div>
         </footer>
         <!-- END FOOTER -->
