column section 2 completed

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             </div>
                             <h4>Professional</h4>
                             <h5>€ 12,00</h5>
-                            <div class="color-gray">/mese</div>
+                            <div class="color-gray margin">/mese</div>
 
                             <div class="flex-container">
                                 <div>
@@ -123,17 +123,17 @@
                                     Funzioni di produttività premium e condivisione file semplice e sicura
                                 </div>
                             </div>
-                            <div>
+                            <div class="margin">
                                 <a class="button" href="#">Prova gratis per 30 giorni</a>
                             </div>
-                            <div>
+                            <div class="margin">
                                 oppure <a href="#">acquista ora</a>
                             </div>
                             <div>
-                                <hr>
+                                <hr class="margin">
                             </div>
                             <div>
-                                <h5>
+                                <h5 class="margin">
                                     Punti salienti del piano
                                 </h5>
                                 <ul>
@@ -148,13 +148,136 @@
                         </div>
 
                         <!-- COLONNA 2 -->
-                        <div class="colum-2-section-2">
-                            col 2
+                        <div class="colum-1-section-2">
+
+                            <div class="type-of-user">
+                                <i class="fa-solid fa-people-group"></i> Team
+                            </div>
+                            <h4>Advance</h4>
+                            <h5>€ 18,00</h5>
+                            <div class="color-gray margin">utente/mese</div>
+
+                            <div class="flex-container">
+                                <div>
+                                    <i class="fa-solid fa-people-group"></i> 
+                                </div>
+                                <div>
+                                    3 o più utenti
+                                </div>
+                            </div>
+
+                            <div class="flex-container">
+                                <div>
+                                    <i class="fa-solid fa-folder"></i> 
+                                </div>
+                                <div>
+                                    Tutto lo spazio di cui ha bisogno il tuo team
+                                </div>
+                            </div>
+
+                            <div class="flex-container">
+                                <div>
+                                    <i class="fa-solid fa-share-nodes"></i> 
+                                </div>
+                                <div>
+                                    Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
+                                </div>
+                            </div>
+                            <div class="margin">
+                                <a class="button" href="#">Prova gratis per 30 giorni</a>
+                            </div>
+                            <div class="margin">
+                                oppure <a href="#">acquista ora</a>
+                            </div>
+                            <div>
+                                <hr class="margin">
+                            </div>
+                            <div>
+                                <h5 class="margin">
+                                    Punti salienti del piano
+                                </h5>
+                                <ul>
+                                    <li>
+                                        Nussun limite per l'invio dei file 
+                                    </li>
+                                    <li>
+                                        Cartelle offline su dispositivi mobile
+                                    </li>
+                                    <li>
+                                        Risparmio del 50% sulle nuove iscrizioni
+                                    </li>
+                                    <li>
+                                        Possibilità di inserire nuovi membri al team
+                                    </li>
+                                    <li>
+                                        Gestione dei permessi in base ai ruoli
+                                    </li>
+                                    
+                                </ul>
+                            </div>
                         </div>
 
                         <!-- COLONNA 3 -->
-                        <div class="colum-3-section-2">
-                            col 3
+                        <div class="colum-1-section-2">
+
+                            <div class="type-of-user">
+                                <i class="fa-solid fa-building"></i> Azienda
+                            </div>
+                            <h4>Enterprise</h4>
+                            <h5>Contattaci</h5>
+                            <div class="color-gray margin">-</div>
+
+                            <div class="flex-container">
+                                <div>
+                                    <i class="fa-solid fa-user"></i> 
+                                </div>
+                                <div>
+                                    10 o più utenti
+                                </div>
+                            </div>
+
+                            <div class="flex-container">
+                                <div>
+                                    <i class="fa-solid fa-folder"></i> 
+                                </div>
+                                <div>
+                                    Soluzioni personalizzabili per la tua azienda
+                                </div>
+                            </div>
+
+                            <div class="flex-container">
+                                <div>
+                                    <i class="fa-solid fa-share-nodes"></i> 
+                                </div>
+                                <div>
+                                    Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
+                                </div>
+                            </div>
+                            <div class="margin">
+                                <a class="button" href="#">Contattaci</a>
+                            </div>
+                            <div class="margin">
+                                oppure <a href="#">acquista ora</a>
+                            </div>
+                            <div>
+                                <hr class="margin">
+                            </div>
+                            <div>
+                                <h5 class="margin">
+                                    Punti salienti del piano
+                                </h5>
+                                <ul>
+                                    <li>
+                                        Cartelle offline su dispositivi mobili
+                                    </li>
+                                    <li>
+                                        Servizio assistenza h24
+                                    </li>
+                                    <li>
+                                        Possibilità di personalizzazione totale
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
