--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="row1-section-2">
                         <h2>Trova il piano business che fa per te</h2>
                         <div class="radio-container">
-                            <input type="radio" name="chose-plan" id="monthly">
+                            <input type="radio" name="chose-plan" id="monthly" checked>
                             <label for="monthly">Fatturazione mensile</label>
                             <input type="radio" name="chose-plan" id="annual">
                             <label for="">Fatturazione annuale</label>
@@ -282,16 +282,48 @@
                     </div>
 
                     <!-- SECTION 2 BOTTOM -->
-                    <div class="row3-section-3">
-                        bottom section row3
+                    <div class="row-3-section-2">
+                        <div class="top-row-3-section-2">
+                            <i class="fa-solid fa-building"></i> Team
+                        </div>
+                        <div class="bottom-row-3-section-2 flex-container">
+                            <div class="col-1">
+                                <h4>
+                                    Enterprise
+                                </h4>
+                                <h5>
+                                    Contatta l'ufficio vendite per i prezzi
+                                </h5>
+                                <p>
+                                    Soluzione personallizata e supporto per aiutare i professionisti IT nella gestione su qualsiasi scala
+                                </p>
+                            </div>
+                            <div class="col-2">
+                                <a class="button" href="#">Contatta l'ufficio vendite</a>
+                            </div>
+                        </div>
                     </div>
-
-
                 </div>
             </section>
 
             <!-- start section 3 -->
-            <section></section>
+            <section class="section-3">
+                <div class="container">
+                    <div class="flex-container">
+                        <div class="col-1">
+                            <img src="./img/partner.png" alt="">
+                        </div>
+                        <div class="col-2">
+                            <h4>
+                                Entra in contatto con un partener Dropbox
+                            </h4>
+                            <p>
+                                Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
+                            </p>
+                            <a class="link-partner" href="#">Trova il partner</a>
+                        </div>
+                </div>
+            </section>
             <!-- start section 4 -->
             <section></section>
             <!-- start section 5 -->
