--- a/index.html
+++ b/index.html
@@ -324,10 +324,113 @@
                         </div>
                 </div>
             </section>
+
             <!-- start section 4 -->
-            <section></section>
+            <section class="section-4">
+                <div class="container">
+                    <div>
+                        <h2>Esegui più operazioni con Dropbox business</h2>
+                    </div>
+                    <div class="container-cards flex-container">
+                        <div class="cards">
+                            <div class="card-img">
+                                <img src="./img/business-feature-switching-tools.png" alt="">
+                            </div>
+                            <div class="description-cards">
+                                <h3>
+                                    Passa di meno da uno strumento a un altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane. Crea, modifica e con un solo strumento condividi contenuti da cloud Documenti, Fogli e Presentazioni di Dropbox Google, file Microsoft Office Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="card-img">
+                                <img src="./img/business-feature-send-files-it.png" alt="">
+                            </div>
+                            <div class="description-cards">
+                                <h3>
+                                    Passa di meno da uno strumento a un altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane. Crea, modifica e con un solo strumento condividi contenuti da cloud Documenti, Fogli e Presentazioni di Dropbox Google, file Microsoft Office Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="card-img">
+                                <img src="./img/business-feature-coordinate-it.png" alt="">
+                            </div>
+                            <div class="description-cards">
+                                <h3>
+                                    Passa di meno da uno strumento a un altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane. Crea, modifica e con un solo strumento condividi contenuti da cloud Documenti, Fogli e Presentazioni di Dropbox Google, file Microsoft Office Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="card-img">
+                                <img src="./img/business-feature-integrations-it.png" alt="">
+                            </div>
+                            <div class="description-cards">
+                                <h3>
+                                    Passa di meno da uno strumento a un altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane. Crea, modifica e con un solo strumento condividi contenuti da cloud Documenti, Fogli e Presentazioni di Dropbox Google, file Microsoft Office Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="card-img">
+                                <img src="./img/business-feature-multi-device.png" alt="">
+                            </div>
+                            <div class="description-cards">
+                                <h3>
+                                    Passa di meno da uno strumento a un altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane. Crea, modifica e con un solo strumento condividi contenuti da cloud Documenti, Fogli e Presentazioni di Dropbox Google, file Microsoft Office Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="card-img">
+                                <img src="./img/business-feature-security.png" alt="">
+                            </div>
+                            <div class="description-cards">
+                                <h3>
+                                    Passa di meno da uno strumento a un altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane. Crea, modifica e con un solo strumento condividi contenuti da cloud Documenti, Fogli e Presentazioni di Dropbox Google, file Microsoft Office Paper direttamente da Dropbox.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!-- start section 5 -->
-            <section></section>
+            <section class="section-5">
+                <div class="container">
+                    <div class="title-section-5">
+                        <h2>
+                            Più di 500.000 team utilizzano Dropbox Business
+                        </h2>
+                    </div>
+                    
+                    <a href="#">Scopri di più sui nostri clienti</a>
+                </div>
+            </section>
             <!-- start section 6 -->
             <section></section>
             <!-- start section 7 -->
