--- a/index.html
+++ b/index.html
@@ -432,9 +432,73 @@
                 </div>
             </section>
             <!-- start section 6 -->
-            <section></section>
+            <section class="section-6">
+                <div class="container-section-6 flex-container">
+                    <!-- LEFT -->
+                    <div class="left-section-6 flex-container">
+                        <div class="background-green flex-container">
+                            <img src="./img/designit.svg" alt="">
+                        </div>
+                        <div class="background-violet flex-container">
+                            <img src="./img/arizona_state_university.svg" alt="">
+                        </div>
+                        <div class="background-lightblue flex-container">
+                            <img src="./img/university_of_florida.svg" alt="">
+                        </div>
+                        <div class="background-red flex-container">
+                            <img src="./img/topps.svg" alt="">
+                        </div>
+                    </div>
+                    
+                    <!-- CENTER -->
+                    <div class="center-section-6">
+                        <div class="logo-designit">
+                            <img src="./img/designit.svg" alt="">
+                        </div>
+                        <hr>
+                        <div>
+                            <p>
+                                "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".
+                            </p>
+                            <p>
+                                Morten Thomsen, Global IT Lead
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- RIGHT -->
+                    <div class="left-section-6 flex-container">
+                        <div class="background-red flex-container">
+                            <img src="./img/world_bicycle_relief.svg" alt="">
+                        </div>
+                        <div class="background-skyblu flex-container">
+                            <img src="./img/hearst_corp.svg" alt="">
+                        </div>
+                        <div class="background-blue flex-container">
+                            <img src="./img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="background-yellow flex-container">
+                            <img src="./img/clear_channel.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- start section 7 -->
-            <section></section>
+            <section class="section-7 background-skyblu">
+                <div class="container">
+                    <div class="flex-container">
+                        <div class="col-1">
+                            <h2>
+                                Porta Dropbox Business  nella tua azienda.
+                            </h2>
+                        </div>
+                        <div class="col-2">
+                            <div class="link-try-free">
+                                <a href="">Inizia la tua prova gratuita</a>
+                            </div>
+                        </div>
+                </div>
+            </section>
         </main>
         <!-- END MAIN -->
 
