--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </section>
 
             <!-- start section 2 -->
-            <section class="section-2">
+            <section class="section-2">0
                 <div class="container">
                     <div class="row1-section-2">
                         <h2>Trova il piano business che fa per te</h2>
@@ -212,6 +212,9 @@
                                     <li>
                                         Gestione dei permessi in base ai ruoli
                                     </li>
+                                    <li>
+                                        Gestione dei permessi in base ai ruoli
+                                    </li>
                                     
                                 </ul>
                             </div>
@@ -322,6 +325,7 @@
                             </p>
                             <a class="link-partner" href="#">Trova il partner</a>
                         </div>
+                    </div>
                 </div>
             </section>
 
@@ -558,8 +562,68 @@
 
         <!-- START FOOTER -->
         <footer>
+            <div class="container flex-container link-footer">
+                <div>
+                    <h3>Dropbox</h3>
+                    <ul>
+                        <li><a href="#">Applicazione dekstop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                
+                <div>
+                    <h3>Prodotti</h3>
+                    <ul>
+                        <li><a href="#">Applicazione dekstop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Azienda</h3>
+                    <ul>
+                        <li><a href="#">Applicazione dekstop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>Supporto</h3>
+                    <ul>
+                        <li><a href="#">Applicazione dekstop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>Community</h3>
+                    <ul>
+                        <li><a href="#">Applicazione dekstop</a></li>
+                        <li><a href="#">Perchè Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+            </div>
             <div class="container">
-                <br><br><br><br><br>FOOTER
+                <hr>
+            </div>
+            <div class="container language">
+                <i class="fa-solid fa-earth-americas"></i> 
+                Italiano
+                <i class="fa-solid fa-caret-up"></i>
             </div>
         </footer>
         <!-- END FOOTER -->
