--- a/index.html
+++ b/index.html
@@ -25,16 +25,81 @@
                         <a href="#"><img src="./img/logo-small.png" alt=""></a>
                     </div>
                     <ul>
-                        <li><a href="#">Perchè Dropbox</a></li>
-                        <li><a href="#">Funzioni</a></li>
-                        <li><a href="#">Piani e Prezzi</a></li>
+                        <li>
+                            <div class="show-link">
+                                <div>
+                                    <a href="#">Perchè Dropbox</a>
+                                </div>
+                                <div class="link-header flex-container">
+                                    <a href="#">Ispirati</a> 
+                                    <a href="#">Cosa dicono i clienti</a>
+                                    <a href="#">Integrazione d'app</a>
+                                    <a href="#">Risorse 4</a>
+                                </div>
+                            </div> 
+                        </li>
+                        <li>
+                            <div class="show-link">
+                                <div>
+                                    <a href="#">Funzioni</a>
+                                </div>
+                                <div class="link-header flex-container">
+                                    <a href="#">Dropbox</a> 
+                                    <a href="#">Backup</a>
+                                    <a href="#">Docsend</a>
+                                    <a href="#">Replay</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="show-link">
+                                <div>
+                                    <a href="#">Piani e Prezzi</a>
+                                </div>
+                                <div class="link-header flex-container">
+                                    <a href="#">Abbonamento singolo</a> 
+                                    <a href="#">Abbonamento famiglia</a>
+                                    <a href="#">Aziendale</a>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
                 <div class="header-container-right flex-container">
                     <ul>
-                        <li><a href="#">Supporto</a></li>
-                        <li><a href="#">Contatta l'ufficio vendite</a></li>
-                        <li><a href="#">Accedi</a></li>
+                        <li>
+                            <div class="show-link">
+                                <div>
+                                    <a href="#">Supporto</a>
+                                </div>
+                                <div class="link-header flex-container">
+                                    <a href="#">Centro assistenza</a> 
+                                    <a href="#">Forum della Community</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="show-link">
+                                <div>
+                                    <a href="#">Contatta l'ufficio vendite</a>
+                                </div>
+                                <div class="link-header flex-container">
+                                    <a href="#">Invia email</a>
+                                    <a href="#">Telefona: +39 0299953412</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="show-link">
+                                <div>
+                                    <a href="#">Accedi</a>
+                                </div>
+                                <div class="link-header flex-container">
+                                    <a href="#">Password dimenticata?</a> 
+                                    <a href="#">Username dimenticato?</a>
+                                </div>
+                            </div>    
+                        </li>
                         <li><a class="button" href="#">Inizia</a></li>
                     </ul> 
                 </div>
@@ -635,7 +700,7 @@
                 <hr>
             </div>
             <div class="container language">
-                <div class="collapsible">
+                <div>
                     <button>
                         <i class="fa-solid fa-earth-americas"></i> 
                         Italiano
