--- a/index.html
+++ b/index.html
@@ -594,8 +594,11 @@
                     
                     <hr>
                     <div class="ask flex-container">
-                        <div>
+                        <div class="hover-container">
                             <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                            <div class="show-faq">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus asperiores sapiente incidunt consequuntur vero voluptas porro quaerat laudantium voluptatibus dicta illum culpa et pariatur hic amet eveniet ipsam, fuga delectus?
+                            </div>
                         </div>
                         <div>
                             <i class="fa-solid fa-chevron-down"></i>
@@ -604,8 +607,11 @@
                     <hr>
 
                     <div class="ask flex-container">
-                        <div>
+                        <div class="hover-container">
                             <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                            <div class="show-faq">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo possimus soluta dicta deserunt aliquam fuga odit hic eum at, expedita vero culpa dolore inventore, debitis velit sequi blanditiis dignissimos itaque alias similique voluptatum. Accusantium sequi nihil officiis perspiciatis eveniet id, at quia distinctio laboriosam. Dolore, praesentium. Voluptas accusantium consequatur tenetur unde deleniti tempore quisquam delectus facilis impedit suscipit, quis ducimus expedita sit molestiae eaque minus similique ea et soluta iusto dicta natus perspiciatis possimus! Ipsam, ad dolorum atque quos et saepe necessitatibus? Nobis optio recusandae ipsam quidem, vel dignissimos saepe ut sint error incidunt. Aliquid labore consequuntur totam exercitationem natus?
+                            </div>
                         </div>
                         <div>
                             <i class="fa-solid fa-chevron-down"></i>
@@ -614,8 +620,11 @@
                     <hr>
 
                     <div class="ask flex-container">
-                        <div>
+                        <div class="hover-container">
                             <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                            <div class="show-faq">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, sit.
+                            </div>
                         </div>
                         <div>
                             <i class="fa-solid fa-chevron-down"></i>
@@ -624,8 +633,12 @@
                     <hr>
 
                     <div class="ask flex-container">
-                        <div>
+                        <div class="hover-container">
                             <h5>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                            <div class="show-faq">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus asperiores sapiente incidunt consequuntur vero voluptas porro quaerat laudantium voluptatibus dicta illum culpa et pariatur hic amet eveniet ipsam, fuga delectus?
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus id illo iure deleniti ab exercitationem accusamus ipsa quas perferendis.
+                            </div>
                         </div>
                         <div>
                             <i class="fa-solid fa-chevron-down"></i>
