Bonus: creata pagina "prova gratis" collegata ind

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <p>
                                 Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                             </p>
-                            <a href="#">Inizia la prova gratuita</a>
+                            <a target="_blank" href="./Acquista/prova-dropbox.html">Inizia la prova gratuita</a>
                             <p>Annulla in qualsiasi momento</p>
                             <div>
                                 <a class="anchor" href="#section-2">
@@ -193,7 +193,7 @@
                             </div> 
                             <div>
                                 <div class="margin size-button">
-                                    <a class="button" href="#">Prova gratis per 30 giorni</a>
+                                    <a target="_blank" class="button" href="./Acquista/prova-dropbox.html">Prova gratis per 30 giorni</a>
                                 </div>
                                 <div class="margin">
                                     oppure <a href="#">acquista ora</a>
@@ -257,7 +257,7 @@
                             </div>
                             <div>
                                 <div class="margin size-button">
-                                    <a class="button" href="#">Prova gratis per 30 giorni</a>
+                                    <a target="_blank" class="button" href="./Acquista/prova-dropbox.html">Prova gratis per 30 giorni</a>
                                 </div>
                                 <div class="margin">
                                     oppure <a href="#">acquista ora</a>
@@ -579,7 +579,7 @@
                         </div>
                         <div class="col-2">
                             <div class="link-try-free">
-                                <a href="">Inizia la tua prova gratuita</a>
+                                <a target="_blank" href="./Acquista/prova-dropbox.html">Inizia la tua prova gratuita</a>
                             </div>
                         </div>
                 </div>
